--- a/odoo/addons/hotel_management_odoo/views/room_booking_views.xml
+++ b/odoo/addons/hotel_management_odoo/views/room_booking_views.xml
@@ -30,6 +30,8 @@
                             type="action"
                             class="btn-primary"/>
 
+
+
                     <field name="state" widget="statusbar" statusbar_visible="draft,check_in,check_out,done"/>
                     <field name="invoice_status" widget="statusbar" invisible="1"/>
                 </header>
@@ -143,4 +145,16 @@
     <!-- Menu -->
     <menuitem id="room_booking_menu" name="Reservation" sequence="10"
               parent="hotel_management_menu_root" action="room_booking_action"/>
+    <!-- Server Action untuk Print -->
+<record id="action_print_booking_excel_server" model="ir.actions.server">
+    <field name="name">Print Booking Excel</field>
+    <field name="model_id" ref="model_room_booking"/>
+    <field name="binding_model_id" ref="model_room_booking"/>
+    <field name="state">code</field>
+    <field name="code">
+        action = env.ref('hotel_management_odoo.action_print_room_booking_excel').read()[0]
+    </field>
+    <field name="binding_view_types">list</field>
+</record>
+
 </odoo>
